--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,8 @@ build:
   number: 0
   skip: true  # [py<36 or (win and rust_compiler == "rust-gnu")]
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  missing_dso_whitelist:
+    - '$RPATH/ld64.so.1'  # [linux-s390x]
 
 requirements:
   build:
