add snowflake channel

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
   skip: true  # [py<36 or (win and rust_compiler == "rust-gnu")]
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
   missing_dso_whitelist:
-    - '$RPATH/ld64.so.1'  # [linux-s390x]
+    - '$RPATH/ld64.so.1'  # [s390x]
 
 requirements:
   build:
